<resources>
    <string name="app_name" translatable="false">Nmedia</string>
    <string name="nmedia" translatable="false">NMedia!</string>
    <string name="author">Netology. University of Internet Professions</string>
    <string name="likes" translatable="false">10</string>
    <string name="share" translatable="false">5</string>
    <string name="visit" translatable="false">5</string>
    <string name="content">Hello, this is the new Netology! Once upon a time, Netology began with online marketing intensives. Then there were courses on design, development, analytics and management. We grow ourselves and help students grow: from beginners to confident professionals. But what is most yours remains with us: we believe that everyone already has the power that makes you want more, aim higher, run faster. Our mission is to help you get on the path of growth and start the chain of change -> http//netolo.gy/fyb</string>
    <string name="published" translatable="false">May 21 at 18:36</string>
    <string name="post_remove" translatable="false">Remove</string>
    <string name="edit" translatable="false">Edit</string>
    <string name="shared" translatable="false">Share</string>
    <string name="options" translatable="false">Menu</string>
    <string name="error_empty_content" translatable="false">Content is empty</string>
    <string name="post_text" translatable="false">Введите текст</string>
    <string name="text" translatable="false">Текст</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>>
    <string name="channel_remote_name" translatable="false">Server notifications</string>
    <string name="channel_remote_description" translatable="false">Notifications from remote server</string>
    <string name="notification_user_liked" translatable="false">%1$s liked %2$s\'s post</string>
    <string name="notification_new_post" translatable="false">%1$s published new post</string>
    <string name="no_post" translatable="true">" It's empty here. You can add the first post"</string>
    <string name="error_loading">ERROR</string>
    <string name="retry_loading">RETRY</string>
    <string name="post_empty">POST EMPTY</string>
    <string name="todo">TODO</string>
    <string name="input_video_link_here">Input videolink here</string>
    <string name="post_input_text">Input text</string>
    <string name="NewPost" translatable="false">New Posts</string>
    <string name="menu_save">Save</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="Authorization">Authorization required to continue!</string>
    <string name="AuthorizationMes">Please go through the authorization procedure!</string>
    <string name="Later">Later</string>
    <string name="warningAuth">Please login to use all features.</string>
    <string name="Code1">Response information code</string>
    <string name="Code2">Redirect</string>
    <string name="errorCode1">Client Error</string>
    <string name="errorCode2">Server error</string>
    <string name="dialogTitle">Notification</string>
    <string name="dialogMes">Do you confirm logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="errorGoogle">Google Api Unavailable</string>
    <string name="errorLogPass">Wrong login or password</string>
    <string name="errorPol">Please complete all fields to continue</string>
    <string name="errorPassword">Passwords do not match!</string>


</resources>

